--- a/config/locales/spree_i18n.hu.yml
+++ b/config/locales/spree_i18n.hu.yml
@@ -236,9 +236,13 @@ hu:
   adjustment_total: Korrekció Összesen
   adjustments: Korrekciók
   administration: Adminisztráció
+  admin:
+    mail_methods:
+      testmail_error: "Teszt email sikertelen." 
   all: "Mind"
   all_departments: Minden részleg
   allow_backorders: "Előrendelés engedélyezett"
+  allow_ssl_in_production: "SSl production-ban ( ne basztasd )"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Allow SSL to be used when in development and test modes
   allow_ssl_to_be_used_when_in_production_mode: Allow SSL to be used in production mode
   allowed_ssl_in_production_mode: "SSL will %{not} be used in production"
@@ -278,6 +282,7 @@ hu:
   back_end: Back End
   back_to_store: "Vissza az áruházba"
   back_to_taxonomies_list: "Vissza a taxonómia listához"
+  back_to_reports_list: "Vissza a riportok listához"
   backordered: Előrendelve
   backordering_is_allowed: "Előrendelés %{not} engedélyezett"
   balance_due: "Balance Due"
@@ -351,13 +356,14 @@ hu:
   creditcards: Creditcards
   credits: Credits
   current: Current
+  currency: "Pénznem"
   currency_symbol_position: "Pénznem szimbólumának pozíciója"
   customer: Customer
   customer_details: "Customer Details"
   customer_search: "Customer Search"
   cut: "Kivág"
   date_created: Date created
-  date_range: "Date Range"
+  date_range: "Időtartam"
   date_picker:
        format: "formátum"
   debit: Debit
@@ -366,9 +372,20 @@ hu:
   default_tax_zone: "beállítás alapértelmezettnek"
   delete: Töröl
   delivery: Szállítás
-  depth: Depth
+  depth: "mélység"
   description: Leírás
   destroy: Töröl
+  devise:
+    user_sessions:
+                 user:
+                     signed_out: "Kijelentkeztél!"               
+                     signed_up: "Sikeresen regisztráltál."
+    failure:
+      invalid: "Felhasználónév vagy jelszó hibás"
+      
+    user_registrations:
+                      user:
+                          signed_up: "Már regisztrált."
   didnt_receive_confirmation_instructions: "Didn't receive confirmation instructions?"
   didnt_receive_unlock_instructions: "Didn't receive unlock instructions?"
   discount_amount: "Kedvezmény összeg"
@@ -403,6 +420,7 @@ hu:
   enable_login_via_login_password: "Use standard email/password"
   enable_login_via_openid: "Use OpenID instead"
   enable_mail_delivery: Enable Mail Delivery
+  end: "vége"
   enter_atleast_five_letters: Enter atleast five letters of customer name
   enter_exactly_as_shown_on_card: Please enter exactly as shown on the card
   enter_password_to_confirm: "(we need your current password to confirm your changes)"
@@ -424,6 +442,7 @@ hu:
   extension: Extension
   extensions: Extensions
   filename: Filename
+  filter_results: "Találatok szűrése"
   final_confirmation: "Final Confirmation"
   finalize: Finalize
   finalized_payments: Finalized Payments
@@ -505,7 +524,7 @@ hu:
   listing_option_types: "Listing Option Types"
   listing_orders: "Listing Orders"
   listing_product_groups: "Listing Product Groups"
-  listing_reports: "Riprotok listája"
+  listing_reports: "Riportok listája"
   listing_tax_categories: "Listing Tax Categories"
   listing_users: "Listing Users"
   live: "Live"
@@ -513,7 +532,7 @@ hu:
   locale_changed: "Nyelv megváltoztatva"
   log_in: "Belépés"
   logged_in_as: "Belépve mint"
-  logged_in_succesfully: "Sikeresen beléptél"
+  logged_in_succesfully: "Sikeresen beléptél!"
   logged_out: "Kiléptél."
   login: Belépés
   login_as_existing: "Belépés létező felhasználóval"
@@ -529,6 +548,7 @@ hu:
   make_refund: Make refund
   mark_shipped: "Szállítottnak jelöl"
   master_price: "Alap ár"
+  match_rule: "Válassz módot"
   max_items: Max Items
   may_be_combined_with_other_promotions: May be combined with other promotions
   meta_description: "Meta Leírás"
@@ -595,7 +615,8 @@ hu:
     product_not_deleted: "Product could not be deleted"
     variant_deleted: "Variant has been deleted"
     variant_not_deleted: "Variant could not be deleted"
-  on_hand: "On Hand"
+  on_hand: "Raktáron/db"
+  on_demand: "Megrendelésre"
   operation: Operation
   option_type: "Opció típus"
   option_types: "Opció típusok"
@@ -614,7 +635,13 @@ hu:
     cancel_email: 
       subject: "Cancellation of Order"
     confirm_email: 
-      subject: "Order Confirmation"
+      subject: "Rendelés Visszaigazolása"
+      dear_customer: "Kedves vásárló!"
+      instructions: ""
+      order_summary: "Rendelése összesítés:"
+      subtotal: "Termék összesen:"
+      total: "Összesen:"
+      thanks: "Köszönjük a megrendelést! Picur Webáruház"
   order_not_in_system: That order number is not valid on this site.
   order_number: Order
   order_operation_authorize: Authorize
@@ -634,8 +661,8 @@ hu:
     resumed: helyreállított
     returned: visszatért
   order_summary: Rendelés összesítő
-  order_sure_want_to: "Are you sure you want to %{event} this order?"
-  order_total: "Rendelés össz"
+  order_sure_want_to: "Biztos vagy benne, hogy %{event} ezt a rendelést?"
+  order_total: "Rendelés összesen"
   order_total_message: "The total amount charged to your card will be"
   order_updated: "Rendelés Frissítve"
   orders: "Rendelések"
@@ -666,16 +693,16 @@ hu:
   payment_methods: Payment Methods
   payment_methods_setting_description: Configure methods customers can use to pay
   payment_processing_failed: "Payment could not be processed, please check the details you entered"
-  payment_state: Payment State
+  payment_state: "Füzetés állása"
   payment_states: 
     balance_due: balance due
-    checkout: checkout
-    completed: completed
+    checkout: "kassza"
+    completed: "teljesítve"
     credit_owed: credit owed
-    failed: failed
-    paid: paid
-    pending: pending
-    processing: processing
+    failed: "meghiúsult"
+    paid: "kifüzetve"
+    pending: "sorban áll"
+    processing: "feldolgozás alatt"
     void: void
   payment_updated: Payment Updated
   payments: Payments
@@ -898,7 +925,7 @@ hu:
   roles: Roles
   rules: Rules
   sales_tax: "Sales Tax"
-  sales_total: "Sales Total"
+  sales_total: "Összes eladás"
   sales_total_description: "Sales Total For All Orders"
   save_and_continue: Mentés és Folytatás
   save_preferences: Save Preferences
@@ -918,6 +945,7 @@ hu:
   send_mails_as: Send Mails As
   send_me_reset_password_instructions: "Send me reset password instructions"
   send_order_mails_as: Send Order Mails As
+  send_testmail: "teszt email küldés"
   server: Server
   server_error: "The server returned an error"
   settings: Settings
@@ -929,7 +957,7 @@ hu:
     shipped_email: 
       subject: "Shipment Notification"
   shipment_number: "Shipment #"
-  shipment_state: Shipment State
+  shipment_state: "Szállítás állása"
   shipment_states: 
     backorder: backorder
     partial: partial
@@ -943,7 +971,7 @@ hu:
   shipping_address: "Szállítási Cím"
   shipping_categories: "Szállítás kategóriája"
   shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
-  shipping_category: Shipping Category
+  shipping_category: "Szállítási kategória"
   shipping_cost: Cost
   shipping_error: "Szállítási Hiba"
   shipping_instructions: "Szállítási Instrukciók"
@@ -957,7 +985,8 @@ hu:
   show_active: "Aktívak mutatása"
   show_deleted: "Töröltek mutatása"
   show_incomplete_orders: "Show Incomplete Orders"
-  show_only_complete_orders: "Only show complete orders"
+  show_only_complete_orders: "Csak kész rendelések."
+  show_only_unfulfilled_orders: "Csak kitöltetlen rendelések."
   show_out_of_stock_products: "Mutassa a készleten nem lévő termékeket is"
   show_price_inc_vat: "Show price including VAT"
   showing_first_n: "Showing first %{n}"
@@ -993,7 +1022,7 @@ hu:
   state_based: "State Based"
   state_setting_description: "Administer the list of states/provinces associated with each country."
   states: Counties
-  status: Status
+  status: "Státusz"
   stop: Stop
   store: "Bolt"
   street_address: "Utca"
@@ -1007,7 +1036,7 @@ hu:
   tax: Adó
   tax_categories: "Adó kategóriák"
   tax_categories_setting_description: "Set up tax categories to identify which products should be taxable."
-  tax_category: "Tax Category"
+  tax_category: "Adó kategória"
   tax_rates: "Adó Mérték"
   tax_rates_description: Tax rates setup and configuration.
   tax_settings: "Adó beállítások"
