--- a/config/locales/spree_i18n.hu.yml
+++ b/config/locales/spree_i18n.hu.yml
@@ -238,7 +238,8 @@ hu:
   administration: Adminisztráció
   admin:
     mail_methods:
-      testmail_error: "Teszt email sikertelen." 
+      testmail:
+        error: "Teszt email sikertelen." 
   all: "Mind"
   all_departments: Minden részleg
   allow_backorders: "Előrendelés engedélyezett"
