--- a/config/locales/spree_i18n.hu.yml
+++ b/config/locales/spree_i18n.hu.yml
@@ -1013,11 +1013,12 @@ hu:
   sold: Sold
   sort_ordering: "Sort ordering"
   special_instructions: "Special Instructions"
-  spree: 
-    date: Date
-    time: Time
+  spree:
+    date: Dátum
     date_picker:
-      format: "kattints hogy megtekintsd"
+      format: ! '%Y/%m/%d'
+      js_format: 'yy/mm/dd'
+    time: Idő
   spree_gateway_error_flash_for_checkout: "There was a problem with your payment information. Please check your information and try again."
   ssl_will_be_used_in_development_and_test_modes: "SSL will be used in development and test mode if necessary."
   ssl_will_be_used_in_production_mode: "SSL will be used in production mode"
