--- a/config/locales/spree_i18n.hu.yml
+++ b/config/locales/spree_i18n.hu.yml
@@ -161,8 +161,8 @@ hu:
         one: Megrendelés
         other: Megrendelések
       payment: 
-        one: Payment
-        other: Payments
+        one: Fizetés
+        other: Fizetések
       product: 
         one: Termék
         other: Termékek
@@ -182,8 +182,8 @@ hu:
         one: Szerepkör
         other: Szerepkörök
       shipment: 
-        one: Shipment
-        other: Shipments
+        one: Szálíltás
+        other: Szállítások
       shipping_category: 
         one: "Shipping Category"
         other: "Shipping Categories"
@@ -261,7 +261,7 @@ hu:
     no_key: "No key defined"
     regenerate_key: "Regenerate API key"
   apply: Alkalmaz
-  are_you_sure: "Biztos vagy benne"
+  are_you_sure: "Biztos vagy benne?"
   are_you_sure_category: "Biztos vagy benne, hogy törölni akarod ezt a kategóriát?"
   are_you_sure_delete: "Biztos vagy benne, hogy törölni akarod ezt a bejegyzést?"
   are_you_sure_delete_image: "Biztos vagy benne, hogy törölni akarod ezt a képet?"
@@ -280,6 +280,7 @@ hu:
   back_to_static_pages_list: "statikus oldalak listája"
   back_to_store: "Vissza az áruházba"
   back_to_taxonomies_list: "Vissza a taxonómia listához"
+  back_to_orders_list: "Rendeléseklistájához"
   backordered: Előrendelve
   backordering_is_allowed: "Előrendelés %{not} engedélyezett"
   balance_due: Kiegyenlítetlen
@@ -296,10 +297,10 @@ hu:
   cancel_my_account: "Töröld a fiókomat"
   cancel_my_account_description: Elégedetlen?
   canceled: Megszakítva
-  cannot_create_returns: "Cannot create returns as this order has not shipped yet."
+  cannot_create_returns: "Nem lehet visszaküldeni, mert még nincs elküldve."
   cannot_destory_line_item_as_inventory_units_have_shipped: "Cannot destory line item as some inventory units have shipped."
-  cannot_perform_operation: "Cannot perform requested operation"
-  capture: capture
+  cannot_perform_operation: "A kért feladat nem végrehajtható"
+  capture: Teljesít
   card_code: "Card Code"
   card_details: "Card details"
   card_number: "Card Szám"
@@ -355,11 +356,12 @@ hu:
   currency: Pénznem
   currency_symbol_position: "Pénznem szimbólumának pozíciója"
   current: Current
-  customer: Customer
-  customer_details: "Customer Details"
-  customer_search: "Customer Search"
+  customer: Vásárló
+  customer_details: "Vásárló adatok"
+  customer_search: "Vásárló keresés"
   cut: Kivág
-  date_created: "Date created"
+  date_created: "Létrehozva"
+  date_completed: "Leadás dátuma"
   date_picker: 
     format: formátum
   date_range: Időtartam
@@ -427,8 +429,8 @@ hu:
       could_not_create_taxon: "Could not create taxon"
       no_shipping_methods_available: "No shipping methods available for selected location, please change your address and try again."
   errors_prohibited_this_record_from_being_saved: 
-    one: "1 error prohibited this record from being saved"
-    other: "%{count} errors prohibited this record from being saved"
+    one: "Egy hiba megakadályozta a műveletet:"
+    other: "%{count} db hiba megakadályozta ezt a műveletet"
   event: Event
   existing_customer: "Existing Customer"
   expiration: Expiration
@@ -489,6 +491,7 @@ hu:
   included_in_this_shipment: "Included in this Shipment"
   included_price_validation: "Benne van az árban?"
   instructions_to_reset_password: "Töltsd ki a az alábbi mezőt és elküldünk neked egy emailt arról, hogy lehet új jelszót beállítani."
+  insufficient_stock: "Készlethiány"
   integration_settings_warning: "If you are changing the billing integration, you must save first before you can edit the integration settings"
   intercept_email_address: "Intercept Email Cím"
   intercept_email_instructions: "Override email recipient and replace with this address."
@@ -631,13 +634,17 @@ hu:
   ord_qty: "Ord. Qty"
   ord_total: "Ord. Total"
   order: Megrendelés
-  order_confirmation_note: ""
-  order_date: "Order Date"
-  order_details: "Order Details"
-  order_email_resent: "Order Email Resent"
+  order_confirmation_note: "Megrendelés elfogadás info"
+  order_date: "Megrendelés dátuma"
+  order_details: "Megrendelés részletek"
+  order_email_resent: "Rendelés email újraküldve"
+  order_information: "Rendelés info"
   order_mailer: 
     cancel_email: 
-      subject: "Cancellation of Order"
+      subject: "Megrendelés visszavonva"
+      dear_customer: "Kedves vásárló"
+      instructions: "Az alábbi rendelése vissza lett vonva."
+      order_summary_canceled: "Visszavonás összesítése"
     confirm_email: 
       dear_customer: "Kedves vásárló!"
       instructions: ""
@@ -705,9 +712,9 @@ hu:
     paid: kifüzetve
     pending: "sorban áll"
     processing: "feldolgozás alatt"
-    void: void
+    void: Érvénytelen
   payment_updated: "Payment Updated"
-  payments: Payments
+  payments: Fizetések
   pending_payments: "Pending Payments"
   permalink: Permalink
   phone: Telefon
@@ -916,10 +923,10 @@ hu:
   resume: resume
   resumed: Resumed
   return: return
-  return_authorization: "Return Authorization"
+  return_authorization: "Visszaküldési engedély"
   return_authorization_updated: "Return authorization updated"
-  return_authorizations: "Return Authorizations"
-  return_quantity: "Return Mennyiség"
+  return_authorizations: "Visszaküldési engedélyek"
+  return_quantity: "Visszaküldési mennyiség"
   returned: Returned
   rma_credit: "RMA Credit"
   rma_number: "RMA Number"
@@ -940,8 +947,9 @@ hu:
   secure_creditcard: "Secure Creditcard"
   security_settings: "Biztonsági beállítások"
   select: Select
-  select_from_prototype: "Select From Prototype"
+  select_from_prototype: "Kiválasztás prototípusból"
   select_preferred_shipping_option: "Select preferred delivery option"
+  select_a_variant: "Válassz egy variánst"
   send_copy_of_all_mails_to: "Send Copy of All Mails To"
   send_copy_of_orders_mails_to: "Send Copy of Order Mails To"
   send_mails_as: "Send Mails As"
@@ -951,13 +959,14 @@ hu:
   server: Server
   server_error: "The server returned an error"
   settings: Settings
-  ship: ship
-  ship_address: "Ship Cím"
-  shipment: Shipment
-  shipment_details: "Shipment Details"
+  ship: Szállít
+  ship_address: "Szállítási cím"
+  shipment: Szállítás
+  shipment_details: "Szállítás adatok"
   shipment_mailer: 
     shipped_email: 
-      subject: "Shipment Notification"
+      subject: "Tájékoztató a szállításról"
+
   shipment_number: "Shipment #"
   shipment_state: "Szállítás állása"
   shipment_states: 
@@ -1015,6 +1024,7 @@ hu:
       js_format: yy/mm/dd
     time: Idő
   spree_gateway_error_flash_for_checkout: "There was a problem with your payment information. Please check your information and try again."
+  spree_inventory_error_flash_for_insufficient_quantity: "Hiba: egy vagy több termék elfogyott."
   ssl_will_be_used_in_development_and_test_modes: "SSL will be used in development and test mode if necessary."
   ssl_will_be_used_in_production_mode: "SSL will be used in production mode"
   ssl_will_not_be_used_in_development_and_test_modes: "SSL will not be used in development and test mode if necessary."
@@ -1062,7 +1072,7 @@ hu:
   test: Teszt
   test_mode: "Teszt Mód"
   thank_you_for_your_order: "Thank you for your business.  Please print out a copy of this confirmation page for your records."
-  there_were_problems_with_the_following_fields: "There were problems with the following fields"
+  there_were_problems_with_the_following_fields: "Az alábbi mezőkkel volt gond"
   this_file_language: "English (UK)"
   this_month: "Aktuális Hónap"
   this_year: "Aktuális Year"
@@ -1107,6 +1117,7 @@ hu:
   validate_on_profile_create: "Validate on profile create"
   validation: 
     cannot_be_less_than_shipped_units: "cannot be less than the number of shipped units."
+    exceeds_available_stock: "Több mint a raktárkészlet."
     is_too_large: "is too large -- stock on hand cannot cover requested quantity!"
     must_be_int: "must be an integer"
     must_be_non_negative: "must be a non-negative value"
@@ -1117,7 +1128,7 @@ hu:
   version: Verzió
   view_shipping_options: "View shipping options"
   visible: látható
-  void: Void
+  void: Érvénytelen
   website: Website
   weight: Tömeg
   welcome_to_sample_store: "Welcome to the sample store"
